objects/AOPSContactOptInOut__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Contact_Number__c</fullName>
        <externalId>true</externalId>
        <label>AOPS Contact Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AOPSContactOptInOut</relationshipLabel>
        <relationshipName>AOPSContactOptInOut</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Email_1_AOPS__c</fullName>
        <label>Default Email 1 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_2_AOPS__c</fullName>
        <label>Default Email 2 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_3_AOPS__c</fullName>
        <label>Default Email 3 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Phone_1_AOPS__c</fullName>
        <label>Default Phone 1 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Phone_2_AOPS__c</fullName>
        <label>Default Phone 2 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Phone_3_AOPS__c</fullName>
        <label>Default Phone 3 AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1_AOPS_Seq__c</fullName>
        <label>Email 1 AOPS Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1_AOPS__c</fullName>
        <label>Email 1 AOPS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1_OptIn_AOPS__c</fullName>
        <label>Email 1 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_1_Opt_Date__c</fullName>
        <label>Email 1 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_1_Type_AOPS__c</fullName>
        <label>Email 1 Type AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_AOPS_Seq__c</fullName>
        <label>Email 2 AOPS_Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_AOPS__c</fullName>
        <label>Email 2 AOPS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_OptIn_AOPS__c</fullName>
        <label>Email 2 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2_Opt_Date__c</fullName>
        <label>Email 2 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_2_Type_AOPS__c</fullName>
        <label>Email 2 Type AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_3_AOPS_Seq__c</fullName>
        <label>Email 3 AOPS Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_3_AOPS__c</fullName>
        <label>Email 3 AOPS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_3_OptIn_AOPS__c</fullName>
        <label>Email 3 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_3_Opt_Date__c</fullName>
        <label>Email 3 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_3_Type_AOPS__c</fullName>
        <label>Email 3 Type AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_OptIn1__c</fullName>
        <label>Mobile OptIn 1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_OptIn2__c</fullName>
        <label>Mobile OptIn 2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_OptIn3__c</fullName>
        <label>Mobile OptIn 3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_OptIn_AOPS__c</fullName>
        <label>Mail OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Date__c</fullName>
        <label>Mail Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_1_Opt_Date__c</fullName>
        <label>Mobile 1 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_2_Opt_Date__c</fullName>
        <label>Mobile 2 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_3_Opt_Date__c</fullName>
        <label>Mobile 3 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_1_AOPS_Seq__c</fullName>
        <label>Phone 1 AOPS Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_AOPS__c</fullName>
        <label>Phone 1 AOPS</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_Ext_AOPS__c</fullName>
        <label>Phone 1 Ext AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_OptIn_AOPS__c</fullName>
        <label>Phone 1 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_Opt_Date__c</fullName>
        <label>Phone 1 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_1_Type_AOPS__c</fullName>
        <label>Phone 1 Type AOPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_2_AOPS_Seq__c</fullName>
        <label>Phone 2 AOPS Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_AOPS__c</fullName>
        <label>Phone 2 AOPS</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_Ext_AOPS__c</fullName>
        <label>Phone 2 Ext AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_OptIn_AOPS__c</fullName>
        <label>Phone 2 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_Opt_Date__c</fullName>
        <label>Phone 2 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_2_Type_AOPS__c</fullName>
        <label>Phone 2 Type AOPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Othe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_3_AOPS_Seq__c</fullName>
        <label>Phone 3 AOPS Seq</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_AOPS__c</fullName>
        <label>Phone 3 AOPS</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_Ext_AOPS__c</fullName>
        <label>Phone 3 Ext AOPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_OptIn_AOPS__c</fullName>
        <label>Phone 3 OptIn AOPS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_3_Opt_Date__c</fullName>
        <label>Phone 3 Opt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_3_Type_AOPS__c</fullName>
        <label>Phone 3 Type AOPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AOPSContactOptInOut</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AOPSContactOptInOut Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPSContactOptInOut</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>